Imager release history.  Older releases can be found in Changes.old

 - deprecate setting/deleting tags by code.  If this causes you a
   problem please open an issue.  You can disable the warning produced
   with:

    no warnings 'Imager::tagcodes';

Imager 1.015 - 7 May 2022
============

 - rename the "virtual" member of i_img to "isvirtual" to allow the
   API to be used from C++, this may break source compatibility, using
   the i_img_virtual() accessor is backward compatible.

 - add cookbook entry to populating an image from raw RGB samples
   https://github.com/tonycoz/imager/issues/471

 - Imager::Probe now puts the existing value of PKG_CONFIG_PATH at the
   front of the PKG_CONFIG_PATH used when it calls pkg-config.

 - setup CodeQL workflow and fix detected warnings

JPEG updates:

 - detect libjpeg (of whichever variety) via pkg-config if possible

 - add specific support for mozjpeg (turn its optimization off by
   default so tests pass.)

 - add libjpeg_version(), is_mozjpeg(), is_turbojpeg() and
   has_arith_coding() methods

 - add jpeg_compress_profile output tag, which only matters for
   mozjpeg

 - the libjpeg_version() method replaces the old
   Imager::File::JPEG::i_libjpeg_version() function, and the format
   has changed.

 - various obscure jpeg output controls:

   - add support for JPEG arithmetic coding when the supplied libjpeg
     supports it.  Note that not all JPEG decoders can handle arithmetic
     coded JPEGs.

   - add support for disabling the JFIF header for JPEG files using the
     jpeg_jfif tag.

   - add support for smoothing to eliminate dithering noise (like cjpeg
     -smooth) using the jpeg_smooth tag.

   - add support for producing JPEG restart markers (like cjpeg -restart
     N), using the jpeg_restart tag.

   - add control over subsample for JPEG (like the cjpeg -sample
     parameter) using the jpeg_sample tag

   - added tags for the rest of the MozJPEG API parameters.
